<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.index.LoginIndexFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                style="@style/Style.ilososLayout.EditText"
                android:id="@+id/login_user_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:paddingHorizontal="16dp"
                android:autofillHints="@string/login_index_form_phone"
                android:hint="@string/login_index_form_phone"
                android:inputType="phone|number"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/login_user_name"
                style="@style/Style.ilososLayout.EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/login_index_form_phone"
                android:hint="@string/login_index_form_name"
                android:inputType="text"
                android:paddingHorizontal="16dp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/login_user_email"
                style="@style/Style.ilososLayout.EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="@string/login_index_form_phone"
                android:hint="@string/login_index_form_email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp"
                tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/Style.ilososLayout.ErrorStringSmall"
            android:id="@+id/submit_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/login_index_form_error"
            android:visibility="invisible"/>

        <Button
            style="@style/Style.ilososLayout.Button"
            android:theme="@style/Theme.ilososLayout.Button"
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="@string/login_index_form_submit"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
